apache2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dml-apache
  labels:
    k8s-app: test-http
spec:
  containers:
  - name: dml-apache
    image: gitlab-registry.nrp-nautilus.io/nhieubrian/apache2:latest
    volumeMounts:
      - mountPath: /var/www/html
      - name: dml-sw-vol
    volumes:
      - name: dml-sw-vol
        persistentVolumeClaim:
          claimName: dml-sw-vol
