apache2-service-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dml
  namespace: ucsd-digital-media-lab
  labels:
    app: dml
spec:
  selector:
    app: dml
  ports:
  - name: dml
    protocol: TCP
    port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dml-ingress
  namespace: ucsd-digital-media-lab
  annotations:
    traefik.ingress.kubernetes.io/router.tls: ""
spec:
  rules:
  - host: dml.nrp-nautilus.io/html
    http:
      paths:
      - backend:
          serviceName: dml
          servicePort: 80
